# xiaoheiFS

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  automation  build-linux.sh  build-win.bat  constitution.md  go.work.sum  input require.md
.github/workflows/: docker-build.yml  release-build.yml  release-pingbot-probe.yml  release-xiaoheifs-app.yml  release-xiaoheifs-userapp.yml
adminweb/src/: main.ts
app/xiaoheifs_app/: CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
app/xiaoheifs_userapp/: README.md  pubspec.yaml
backend/: .air.toml  BUG_REPORT.md  CORE_BUSINESS_LOGIC.md  Makefile  README.md  go.mod  go.sum  selling_config_mysql.sql  sms_templates_settings_mysql.sql
backend/plugin-demo/python_automation_minimal/: README.md  build_package.py  manifest.json  pyproject.toml
backend/plugin-demo/python_automation_minimal/schemas/: config.schema.json  config.ui.json
backend/plugin-demo/python_automation_minimal/src/python_automation_minimal/: __init__.py  main.py  plugin.py
backend/plugin-sdk/python/: README.md  pyproject.toml
backend/plugin-sdk/python/src/xiaohei_plugin_sdk/: __init__.py  interfaces.py  models.py  noop.py  server.py
docs/: admin-path-validation.md  app-deploy.md  automation-plugin-development.md  ezpay.md  probe-deploy.md  vps-automation-capability-design.md
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
go-jiyancode/: main.go
pingbot/: config.yaml  go.mod  go.sum
qz-override/: cloud.yml
script/: build-linux.sh  build-win.bat
(+1001 files in other folders)
